Set max box width to ensure better readability

--- a/css/style.scss
+++ b/css/style.scss
@@ -435,6 +435,7 @@
 		margin: 0 0 $size-element-margin 0;
 		padding: $box-padding;
 		width: 100%;
+		max-width: 768px;
 		display: inline-block;
 
 		> :last-child {
